# post_automatization

./: .env  .env.example  .gitignore  Dockerfile  README.md  connectivity_diagnostic.py  database_optimization.sql  demo_export.xlsx  docker-compose.yml  integration_diagnostic.py  main.py  nginx.conf  pyproject.toml  remote_integration_check.py  start.sh
app/api/routes/: auth.py  onec.py  users.py  web.py
app/api/schemas/: user_schemas.py
app/core/config/: settings.py
app/core/logging/: logger.py
app/core/middleware/: logging_middleware.py
app/domain/entities/: user.py
app/domain/repositories/: user_repository.py
app/domain/services/: export_service.py  user_service.py
app/infrastructure/database/: database.py  models.py  user_repository_impl.py
app/scripts/: CreateNewObject.ps1  PS.ps1  PS_block.ps1  changeNumber.ps1  changePass.ps1  getAllUsers.ps1  testSuccessful.ps1
data/: users.db
docs/: 1C_INTEGRATION.md  ADMIN_PANEL_GUIDE.md  API_DOCUMENTATION.md  DEVOPS_NETWORK_CHECKLIST.md  ENV_SETUP.md  NEW_SYSTEM_GUIDE.md  README.md  WINRM_SETUP_GUIDE.md
docs/word/: API_Документация.docx  DevOps.docx  Документация_проекта.docx  Интеграция_с_1C.docx  Настройка_переменных_окружения.docx  Руководство_по_админ_панели.docx  Руководство_по_настройке_WinRM.docx  Руководство_по_новой_системе_управления_пользователями.docx
frontend/: .env  Dockerfile  Dockerfile.local  README.md  index.html  nginx.conf  nginx.local.conf  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AdminPanel.vue  (+8 more)
scripts/: connectivity_diagnostic.ps1
(+3 files in other folders)
