[project]
name = "user-management-system"
version = "0.1.0"
description = "FastAPI application for user management from 1C"
authors = [
    {name = "Vadim Kurdumov"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
    "openpyxl>=3.1.0",
    "xlsxwriter>=3.1.0",
    "ldap3>=2.9.0",
    "pywinrm>=0.4.3",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
